WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106055
testapi is failing with a block-related error in the Objc API
https://bugs.webkit.org/show_bug.cgi?id=106055
Summary
testapi is failing with a block-related error in the Objc API
Geoffrey Garen
Reported
2013-01-03 15:31:42 PST
2013-01-03 15:11:05.211 testapi[88881:60b] TEST: "blockCallback(NSString *)": FAILED
Attachments
Patch
(1.63 KB, patch)
2013-01-04 11:08 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
Patch
(44.83 KB, patch)
2013-01-04 16:44 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
Patch
(1.38 KB, patch)
2013-01-11 15:06 PST
,
Mark Hahnenberg
fpizlo
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-01-04 11:08:27 PST
Created
attachment 181336
[details]
Patch
Mark Hahnenberg
Comment 2
2013-01-04 11:09:00 PST
<
rdar://problem/12954235
>
Geoffrey Garen
Comment 3
2013-01-04 15:33:27 PST
Comment on
attachment 181336
[details]
Patch You can save the old idiom's performance by just putting a "()" at the end.
Mark Hahnenberg
Comment 4
2013-01-04 16:44:38 PST
Created
attachment 181410
[details]
Patch
Geoffrey Garen
Comment 5
2013-01-04 16:49:47 PST
Comment on
attachment 181410
[details]
Patch r=me
WebKit Review Bot
Comment 6
2013-01-07 10:32:41 PST
Comment on
attachment 181410
[details]
Patch Clearing flags on attachment: 181410 Committed
r138957
: <
http://trac.webkit.org/changeset/138957
>
WebKit Review Bot
Comment 7
2013-01-07 10:32:44 PST
All reviewed patches have been landed. Closing bug.
Mark Hahnenberg
Comment 8
2013-01-11 15:04:01 PST
We have a similar bug in ObjCCallbackFunction.mm.
Mark Hahnenberg
Comment 9
2013-01-11 15:06:27 PST
Created
attachment 182427
[details]
Patch
Mark Hahnenberg
Comment 10
2013-01-11 15:11:05 PST
Committed
r139508
: <
http://trac.webkit.org/changeset/139508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug