testapi is failing with a block-related error in the Objc API https://bugs.webkit.org/show_bug.cgi?id=106055

Reviewed by Filip Pizlo.

Same bug as in testapi.mm. We need to actually call the static block, rather than casting the block to a bool.

* API/ObjCCallbackFunction.mm:
(blockSignatureContainsClass):


Canonical link: https://commits.webkit.org/124922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139508 268f45cc-cd09-0410-ab3c-d52691b4dbfc